--- a/PollApp/poll/templates/polls/detail_done.html
+++ b/PollApp/poll/templates/polls/detail_done.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 	<h3>Thanks, for taking part in this choice!</h3>
-	<a href="{% url 'poll:all' %}">Return to the list</a>
+	<a href="{% url 'poll:list' %}">Return to the list</a>
 {% endblock %}
 	
