--- a/PollApp/poll/templates/base.html
+++ b/PollApp/poll/templates/base.html
@@ -6,22 +6,27 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{% block title %}{% endblock %}</title>
+	<title>{% block title %}Poll App{% endblock %}</title>
 	{% bootstrap_css %}
 	{% bootstrap_javascript %}
+	<link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 </head>
 <body>
-	{% if user.is_authenticated %}
-		<h3>Hello {{ request.user.username }}</h3>
-		<a href="{% url 'poll:logout' %}">
-			Logout
-		</a>
-	{% else %}
-		<a href="{% url 'poll:login' %}">Login</a>
-		<a href="{% url 'poll:registration' %}">Register</a>
-	{% endif %}
-	{% block content %}
-	{% endblock %}
+	<ul class="nav-bar">
+		<a href="{% url 'poll:list' %}" class="nav-item">PollApp</a>
+		{% if request.user.is_authenticated %}
+			<a href="{% url 'poll:create' %}" class="nav-item">Create poll</a>
+			<a href="{% url 'poll:logout' %}" class="nav-auth">Logout</a>
+			<li class="nav-item">({{ request.user.username }})</li>
+		{% else %}
+			<a href="{% url 'poll:login' %}" class="nav-auth">Login</a>
+			<a href="{% url 'poll:registration' %}" class="nav-auth">Registration</a>
+		{% endif %}
+	</ul>
+	<div class="container">
+		{% block content %}
+		{% endblock %}
+	</div>
 </body>
 </html>
 {% block domready %}
