--- a/PollApp/poll/templates/polls/edit.html
+++ b/PollApp/poll/templates/polls/edit.html
@@ -1,8 +1,14 @@
-<form action="" method="post">
-	{{ form.as_p }}
-	{% csrf_token %}
-	{% for name, value in choices.items %}
-		<p><input type="text" name="{{ name }}" value="{{ value }}"></p>
-	{% endfor %}
-	<button type="submit">Save</button>
-</form>
+{% extends "base.html" %}
+
+{% block title %}Edit poll{% endblock %}
+
+{% block content %}
+	<form action="" method="post">
+		{{ form.as_p }}
+		{% csrf_token %}
+		{% for name, value in choices.items %}
+			<p><input type="text" name="{{ name }}" value="{{ value }}"></p>
+		{% endfor %}
+		<button type="submit">Save</button>
+	</form>
+{% endblock %}
