--- a/PollApp/poll/templates/users/registration.html
+++ b/PollApp/poll/templates/users/registration.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load django_bootstrap5 %}
 
 {% block title %}Registration{% endblock %}
 
@@ -8,7 +9,7 @@
 	</h3>
 	<form action="{% url 'poll:registration' %}" method="post">
 		{% csrf_token %}
-		{{ form.as_p }}
-		<input type="submit" value="Create">
+		{% bootstrap_form form %}
+			<button type="submit" class="btn btn-mint">Create account</button>
 	</form>
 {% endblock %}
