--- a/PollApp/poll/templates/polls/create.html
+++ b/PollApp/poll/templates/polls/create.html
@@ -31,7 +31,8 @@
 			btn.parentNode.removeChild(btn);
 		};
 	});
-		
+	
+	// Created by ChatGpt
 	function addChoice() {
     let choicesContainer = document.getElementById('choiceContainer');
     
