--- a/PollApp/poll/templates/base.html
+++ b/PollApp/poll/templates/base.html
@@ -16,11 +16,11 @@
 		<a href="{% url 'poll:list' %}" class="nav-item">PollApp</a>
 		{% if request.user.is_authenticated %}
 			<a href="{% url 'poll:create' %}" class="nav-item">Create poll</a>
-			<a href="{% url 'poll:logout' %}" class="nav-auth">Logout</a>
+			<a href="{% url 'users:logout' %}" class="nav-auth">Logout</a>
 			<li class="nav-item">({{ request.user.username }})</li>
 		{% else %}
-			<a href="{% url 'poll:login' %}" class="nav-auth">Login</a>
-			<a href="{% url 'poll:registration' %}" class="nav-auth">Registration</a>
+			<a href="{% url 'users:login' %}" class="nav-auth">Login</a>
+			<a href="{% url 'users:registration' %}" class="nav-auth">Registration</a>
 		{% endif %}
 	</ul>
 	<div class="container">
