--- a/PollApp/poll/templates/polls/result.html
+++ b/PollApp/poll/templates/polls/result.html
@@ -8,7 +8,9 @@
     	<p>Author: {{ poll.owner }}</p>
     	<p>Created: {{ poll.created }}</p>
     	<p>Total votes: {{ poll.total_votes }}</p>
-    	<p>Description: {{ poll.description }}</p>
+    	{% if poll.description %}
+    		<p>Description: {{ poll.description }}</p>
+  		{% endif %}
   	</div>
 	</div>
 	<div class="card">
@@ -20,7 +22,7 @@
 				  <li class="list-group-item">
 				    <div class="form-check form-check-inline">
 			  			<input class="form-check-input" type="radio" name="choices" id="{{ id }}" value="{{ id }}" 
-			  			{% if user_choice == id %}checked disabled{% else %}disabled{% endif %}>
+			  			{% if selected_choice_id == id %}checked disabled{% else %}disabled{% endif %}>
 			  			<label class="form-check-label" for="{{ id }}">
 			  				{{ choice|first }}
 			  			</label>
