--- a/PollApp/poll/templates/polls/edit.html
+++ b/PollApp/poll/templates/polls/edit.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
+{% load django_bootstrap5 %}
 
 {% block title %}Edit poll{% endblock %}
 
 {% block content %}
 	<form action="" method="post">
-		{{ form.as_p }}
+		{% bootstrap_form form %}
 		{% csrf_token %}
 		{% for name, value in choices.items %}
 			<p><input type="text" name="{{ name }}" value="{{ value }}"></p>
 		{% endfor %}
-		<button type="submit">Save</button>
+		<button type="submit" class="btn btn-mint">Save</button>
 	</form>
 {% endblock %}
