--- a/PollApp/poll/templates/polls/detail.html
+++ b/PollApp/poll/templates/polls/detail.html
@@ -7,7 +7,7 @@
   	<div class="card-body card-info">
     	<p>Author: {{ poll.owner }}</p>
     	<p>Created: {{ poll.created }}</p>
-    	<p>Total votes: {{ poll.total_votes }}</p>
+    	<p>Total votes: {{ poll.votes }}</p>
     	{% if poll.description %}
     		<p>Description: {{ poll.description }}</p>
     	{% endif %}
@@ -20,12 +20,12 @@
 			</div>
 		  	{% csrf_token %}
 		    <ul class="list-group list-group-flush">
-			    {% for id, choice in choices.items %}
+			    {% for choice in choices.keys %}
 					  <li class="list-group-item">
 					    <div class="form-check form-check-inline">
-				  			<input class="form-check-input" type="radio" name="choices" id="{{ id }}" value="{{ id }}" 
-				  			{% if selected_choice_id == id %}checked{% else %}required{% endif %}>
-				  			<label class="form-check-label" for="{{ id }}">{{ choice }}</label>
+				  			<input class="form-check-input" type="radio" name="choices" id="{{ choice.id }}" value="{{ choice.id }}" 
+				  			{% if selected_choice.id == choice.id %}checked{% else %}required{% endif %}>
+				  			<label class="form-check-label" for="{{ choice.id }}">{{ choice }}</label>
 							</div>
 						</li>
 			    {% endfor %}
